--- a/app/templates/update.html
+++ b/app/templates/update.html
@@ -1,8 +1,6 @@
-{% head block %}
 
-{% endblock %}
 
-{% block body %}
+{% block content %}
 
 <div class="content">
     <h1 style = "text-align:center"> Update Task</h1>
@@ -13,3 +11,5 @@
         </form>
     </div>
 </div>
+
+{% endblock %}
